# anon-mte-artifact

./: README.md
firefox-mte/: README.md  build_and_test.sh  mots.yaml  mozconfig_android_copy  mozconfig_android_mte  mozconfig_android_mte_debug  mozconfig_android_stock  mozconfig_copy  mozconfig_crossaarch64_debug  mozconfig_mte  mozconfig_mte_debug  mozconfig_stock  mozconfig_stock_debug  sourcestamp.txt  testsAnalyzeExtractedLogs.py  testsExtractFromLogs.py  testsRunBenchmark
firefox-mte/toolkit/: moz.configure
mte-bench-clean/: README.md
mte-bench-clean/heatmap/: data.py  makefile  plot.py  run.sh  (+1 more)
mte-playground/: README.md  bench_runner  build_spec_utils.sh  clang_lfi_wrapper.sh  getipc.py  ignorelist.txt  llvm-aarch64-mte-tagcfi.cfg  lockClocks.sh  lockClocks_linux.sh  plot_all.py  plot_ref.py  rsf_parser.py  run_spec.sh  spectools.patch
mte-polybench/: Makefile  data.txt  data_5.txt  out_a1_old.csv  plot.py  polybench_a1_host.csv  polybench_p8.csv  run-mte-test.sh  wasm-rt-static-runner.c
mte-root/: Makefile  README.md
mte-server/: Makefile  README.md  run.sh
mte_benchmarks/: Readme  init_mte.sh  mmap  mmap.cpp  mte  mte.c  mte_tester.c
mtetrap/: .config  CMakeLists.txt  LocalCompiledAndroid_Module.symvers  Makefile  README.md  gen-modsymvers.sh  interval_tree.h  mte-example.c  mte-handler-bypass.c  mtetrap_module.c  mtetrap_module.h  mtetrap_recovery.h  mtetrap_recoverypatchup.h  openssl-mtetrap.patch  pixel8_config  test_symbol_whitelist.txt  ubuntu-libvirt.xml
mtetrap/dynamorio/: CMakeLists.txt  build.sh  drwatchpoint.h  memtrace_custom.c
(+830 files in other folders)
