add_library(memtrace_custom SHARED memtrace_custom.c)
find_package(DynamoRIO)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(memtrace_custom)
use_DynamoRIO_extension(memtrace_custom drmgr)
use_DynamoRIO_extension(memtrace_custom drreg)
use_DynamoRIO_extension(memtrace_custom drutil)
use_DynamoRIO_extension(memtrace_custom drsyms)
use_DynamoRIO_extension(memtrace_custom drx)
